--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,10 +1,56 @@
 <resources>
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <!-- AUTHENTICATION TEXT -->
+    <style name="activity_txt">
+        <item name="android:textColor">@color/colorAccentWhite</item>
+    </style>
+
+    <!-- AUTHENTICATION TEXT LOGO-->
+    <style name="text_logo" parent="activity_txt">
+        <item name="android:textSize">@dimen/size_logo_text</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <!-- AUTHENTICATION SUBTITLE -->
+    <style name="subtitle_text" parent="activity_txt">
+        <item name="android:textSize">@dimen/size_subtitle_text</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+
+    <!-- Auth activity button BASE -->
+    <style name="ButtonStyle" parent="Widget.AppCompat.Button">
+        <item name="android:padding">@dimen/auth_activity_padding_button</item>
+        <item name="android:textSize">@dimen/size_text_button</item>
+        <item name="android:textColor">@color/colorAccentWhite</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
+
+    <!--GOOGLE BUTTON -->
+    <style name="googleButtonStyle" parent="ButtonStyle">
+        <item name="android:background">@drawable/button_google</item>
+        <item name="android:drawableStart">@drawable/ic_google</item>
+        <item name="android:text"> @string/google_login </item>
+    </style>
+
+    <!-- FACEBOOK BUTTON -->
+    <style name="facebookButtonStyle" parent="ButtonStyle">
+        <item name="android:background">@drawable/button_facebook</item>
+        <item name="android:drawableStart">@drawable/ic_facebook</item>
+        <item name="android:text">@string/facebook_login</item>
+
+    </style>
+    <!-- EMAIL BUTTON -->
+    <style name="emailButtonStyle" parent="ButtonStyle">
+    <item name="android:background">@drawable/button_email</item>
+    <item name="android:drawableStart">@drawable/ic_email</item>
+    <item name="android:text">@string/email_login</item>
+    </style>
 </resources>
