--- a/app/src/main/res/layout/fragment_list_workemates.xml
+++ b/app/src/main/res/layout/fragment_list_workemates.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".views.fragments.WorkmatesList">
+    tools:context=".views.fragment.WorkmatesList">
 
     <!-- TODO: Update blank fragment layout -->
     <androidx.recyclerview.widget.RecyclerView
