--- a/app/src/main/res/layout/fragment_list_restaurant.xml
+++ b/app/src/main/res/layout/fragment_list_restaurant.xml
@@ -1,18 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="views.fragments.ListRestaurant">
+    android:layout_height="match_parent">
 
-    <!-- TODO: Update blank fragment layout -->
-    <androidx.recyclerview.widget.RecyclerView
-        android:layout_height="match_parent"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:id="@+id/recyclerView_list_restaurant"
-        android:scrollbars="vertical"
-        tools:listitem="@layout/list_view_item"
-        android:padding="4dp"
-        />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-</FrameLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/no_star"
+            style="@style/list_filter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/no_star"
+            android:gravity="center"/>
+        <TextView
+            android:id="@+id/star1"
+            style="@style/list_filter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/star_1"
+            android:gravity="center"/>
+
+        <TextView
+            android:id="@+id/star2"
+            style="@style/list_filter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/star_2"
+            android:gravity="center"/>
+
+        <TextView
+            android:id="@+id/star3"
+            style="@style/list_filter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/star_3"
+            android:gravity="center"/>
+
+        <TextView
+            android:id="@+id/no_filter"
+            style="@style/list_filter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/no_filter"
+            android:gravity="center"/>
+
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/no_restaurant_text"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:text="@string/no_restaurant_for_this_filter_selection"
+        android:textSize="30sp"
+        android:visibility="gone" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView_list_restaurant"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:listitem="@layout/list_view_item" />
+</LinearLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
