--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -106,4 +106,15 @@
         <item name="android:textStyle">italic</item>
     </style>
 
+    <!-- List filter style -->
+    <style name="list_filter">
+        <item name="android:layout_margin">@dimen/margin_start_10</item>
+        <item name="android:textColor">@color/white_text</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:focusable">true</item>
+        <item name="android:clickable">true</item>
+    </style>
+
+
 </resources>
