--- a/app/src/main/res/layout/navigation_header.xml
+++ b/app/src/main/res/layout/navigation_header.xml
@@ -4,61 +4,66 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/navigationHeader"
         android:layout_width="match_parent"
-        android:layout_height="176dp"
+        android:layout_height="220dp"
         android:background="@drawable/ic_restaurant_image"
-        android:padding="16dp">
+       >
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="@dimen/padding_16"
+        android:gravity="bottom"
+        tools:ignore="MissingConstraints">
 
         <TextView
             android:id="@+id/textViewLogoDrawer"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
-            android:layout_marginLeft="24dp"
-            android:layout_marginTop="9dp"
+            style="@style/header_navigation"
             android:text="Go4Lunch"
-            android:textColor="@android:color/white"
-            android:textSize="40sp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+             />
+
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center">
 
         <ImageView
             android:id="@+id/imageProfileHeader"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginRight="16dp"
-            android:contentDescription="@null"
-           android:src="@drawable/ic_identity"
-            app:layout_constraintBottom_toBottomOf="@+id/nameProfileHeader"
-            app:layout_constraintEnd_toStartOf="@+id/emailProfileHeader"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/nameProfileHeader" />
+            android:layout_width="@dimen/image_button_50"
+            android:layout_height="@dimen/image_button_50"
+            android:layout_margin="@dimen/margin_5"
+            app:srcCompat="@drawable/ic_identity"
+          />
 
-        <TextView
-            android:id="@+id/nameProfileHeader"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="7dp"
-            android:text="Name"
-            android:textColor="@android:color/white"
-            app:layout_constraintBottom_toTopOf="@+id/emailProfileHeader"
-            app:layout_constraintStart_toStartOf="@+id/emailProfileHeader" />
+            android:orientation="vertical"
+            android:layout_gravity="start">
 
-        <TextView
-            android:id="@+id/emailProfileHeader"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="147dp"
-            android:layout_marginRight="147dp"
-            android:layout_marginBottom="19dp"
-            android:text="Email"
-            android:textColor="@android:color/white"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/imageProfileHeader" />
+            <TextView
+                android:id="@+id/nameProfileHeader"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+               android:layout_margin="@dimen/margin_5"
+                android:text="Name"
+                android:textStyle="bold"
+                android:textColor="@android:color/white"
+               />
 
+            <TextView
+                android:id="@+id/emailProfileHeader"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Email"
+                android:textColor="@android:color/white"
+                android:layout_margin="@dimen/margin_5"
+                />
 
+        </LinearLayout>
+
+    </LinearLayout>
+    </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
