--- a/app/src/main/res/menu/navigation_drawer_menu.xml
+++ b/app/src/main/res/menu/navigation_drawer_menu.xml
@@ -7,15 +7,19 @@
     <group android:checkableBehavior="single">
 
         <item android:id="@+id/drawer_yourLunch"
-            android:title="YOUR LUNCH "
+            android:title="@string/your_lunch"
             android:icon="@drawable/ic_restaurant_menu"/>
 
+        <item android:id="@+id/drawer_favorite_restaurant"
+            android:title="@string/favorite_restaurants"
+            android:icon="@drawable/ic_star_choice"/>
+
         <item android:id="@+id/drawer_settings"
-            android:title="SETTINGS"
+            android:title="@string/settings"
             android:icon="@drawable/ic_settings"/>
 
         <item android:id="@+id/drawer_logOut"
-            android:title="LOG OUT "
+            android:title="@string/logout"
             android:icon="@drawable/ic_power_settings_new"/>
 
     </group>
