--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -26,6 +26,10 @@
     <dimen name="padding_16">16dp</dimen>
     <dimen name="text_size_40">40sp</dimen>
     <dimen name="margin_25">25dp</dimen>
+    <dimen name="margin_2">2dp</dimen>
+    <dimen name="image_restaurant">70dp</dimen>
+
+
 
 
 
