--- a/app/src/main/res/layout/fragment_list_restaurant.xml
+++ b/app/src/main/res/layout/fragment_list_restaurant.xml
@@ -13,63 +13,59 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="horizontal"
         android:background="@color/colorPrimary"
-        android:orientation="horizontal">
+        >
 
         <TextView
-            android:id="@+id/no_star"
             style="@style/list_filter"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/no_star"
-            android:gravity="center"/>
-        <TextView
-            android:id="@+id/star1"
-            style="@style/list_filter"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/star_1"
-            android:gravity="center"/>
+            android:text="@string/text1"
+            android:layout_gravity="center"/>
 
-        <TextView
-            android:id="@+id/star2"
-            style="@style/list_filter"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/star_2"
-            android:gravity="center"/>
+        <com.getbase.floatingactionbutton.FloatingActionButton
+                android:id="@+id/fragment_list_restaurants_near_me_fab"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:fab_colorNormal="@color/colorPrimary"
+                app:fab_colorPressed="@color/colorPrimary"
+                app:fab_colorRipple="@color/colorPrimary"
+                app:fab_icon="@drawable/ic_fab_near_me_24dp"
+                app:fab_label="@string/Distance"
+                app:fab_size="mini"
+                app:fab_title="@string/Distance" />
 
-        <TextView
-            android:id="@+id/star3"
-            style="@style/list_filter"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/star_3"
-            android:gravity="center"/>
+            <com.getbase.floatingactionbutton.FloatingActionButton
+                android:id="@+id/fragment_list_restaurants_rating_fab"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:fab_colorNormal="@color/colorPrimary"
+                app:fab_colorPressed="@color/colorPrimary"
+                app:fab_colorRipple="@color/colorPrimary"
+                app:fab_icon="@drawable/ic_fab_star_24dp"
+                app:fab_label="@string/Note"
+                app:fab_size="mini" />
 
-        <TextView
-            android:id="@+id/no_filter"
-            style="@style/list_filter"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/no_filter"
-            android:gravity="center"/>
-
+            <com.getbase.floatingactionbutton.FloatingActionButton
+                android:id="@+id/fragment_list_restaurants_name_fab"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:fab_colorNormal="@color/colorPrimary"
+                app:fab_colorPressed="@color/colorPrimary"
+                app:fab_colorRipple="@color/colorPrimary"
+                app:fab_icon="@drawable/ic_fab_alphabetical_24dp"
+                app:fab_label="@string/Name"
+                app:fab_size="mini" />
     </LinearLayout>
-
-    <TextView
-        android:id="@+id/no_restaurant_text"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="@string/no_restaurant_for_this_filter_selection"
-        android:textSize="30sp"
-        android:visibility="gone" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView_list_restaurant"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:listitem="@layout/list_view_item" />
+
 </LinearLayout>
+
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
