--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,6 @@
     <color name="color_workers">#BEBDBD</color>
     <color name="background">#D3D1D1</color>
     <color name="white_text">#FFF</color>
+    <color name="twitter_button">#327bdb</color>
+
 </resources>
