--- a/app/src/main/res/layout/fragment_list_restaurant.xml
+++ b/app/src/main/res/layout/fragment_list_restaurant.xml
@@ -21,7 +21,7 @@
             style="@style/list_filter"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/text1"
+            android:text="@string/filter_restaurant_by"
             android:layout_gravity="center"/>
 
         <com.getbase.floatingactionbutton.FloatingActionButton
@@ -30,11 +30,9 @@
                 android:layout_height="wrap_content"
                 app:fab_colorNormal="@color/colorPrimary"
                 app:fab_colorPressed="@color/colorPrimary"
-                app:fab_colorRipple="@color/colorPrimary"
                 app:fab_icon="@drawable/ic_fab_near_me_24dp"
-                app:fab_label="@string/Distance"
                 app:fab_size="mini"
-                app:fab_title="@string/Distance" />
+                />
 
             <com.getbase.floatingactionbutton.FloatingActionButton
                 android:id="@+id/fragment_list_restaurants_rating_fab"
@@ -42,9 +40,7 @@
                 android:layout_height="wrap_content"
                 app:fab_colorNormal="@color/colorPrimary"
                 app:fab_colorPressed="@color/colorPrimary"
-                app:fab_colorRipple="@color/colorPrimary"
                 app:fab_icon="@drawable/ic_fab_star_24dp"
-                app:fab_label="@string/Note"
                 app:fab_size="mini" />
 
             <com.getbase.floatingactionbutton.FloatingActionButton
@@ -53,9 +49,7 @@
                 android:layout_height="wrap_content"
                 app:fab_colorNormal="@color/colorPrimary"
                 app:fab_colorPressed="@color/colorPrimary"
-                app:fab_colorRipple="@color/colorPrimary"
                 app:fab_icon="@drawable/ic_fab_alphabetical_24dp"
-                app:fab_label="@string/Name"
                 app:fab_size="mini" />
     </LinearLayout>
 
