--- a/app/src/main/res/xml/settings_headers.xml
+++ b/app/src/main/res/xml/settings_headers.xml
@@ -1,22 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
-    <PreferenceCategory app:title="@string/messages_header">
-
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
     <Preference
         android:fragment="com.example.go4lunch.notifications.NotificationsFragment"
         android:title="@string/notification_header"
         android:summary="@string/set_notification_rules"
         android:icon="@drawable/ic_notifications_black"
         />
-    </PreferenceCategory>
 
-    <PreferenceCategory app:title="@string/message_header_language">
+
     <Preference
-    android:title="@string/message_header_language"
-    android:summary="@string/language_preference"
-    android:icon="@drawable/ic_language"
-/>
-    </PreferenceCategory>
+        android:fragment="com.example.go4lunch.language.LanguageFragment"
+        android:title="@string/message_header_language"
+        android:summary="@string/chose_your_language"
+        android:icon="@drawable/ic_language"
+        />
+
 </PreferenceScreen>
