--- a/app/src/main/res/xml/notifications_settings.xml
+++ b/app/src/main/res/xml/notifications_settings.xml
@@ -7,8 +7,8 @@
          <SwitchPreferenceCompat
             app:key="notification_firebase"
             app:title="@string/enable_notification"
-            app:summaryOff="Notifications disable"
-            app:summaryOn="Notifications enable"
+            app:summaryOff="@string/notifications_disable"
+            app:summaryOn="@string/notifications_enable"
             app:icon="@drawable/ic_notifications_black"/>
 
 
